# HF_Dataset_Uploader

./: .gitignore  BIRDNET_UPLOADER_REDESIGN.md  Dockerfile.windows  README.md  RELEASE_STATUS.md  SPRINT1_KICKOFF.md  SPRINT_ROADMAP.md  TROUBLESHOOTING.md  UPLOAD_DIAGNOSTICS.md  WINDOWS_PORTABLE_SETUP.md  app.py  app_debug.py  birdnet-uploader.spec  debug.bat  launcher.bat  pyproject.toml  requirements.txt  test_imports.py  test_uploader_logic.py  tmp_detections_2.csv  upload_segments_local.py
.github/workflows/: build-and-release-windows.yml  build-and-release.yml  build-and-test.yml  build_exe.yml  ci.yml  (+2 more)
cli/: hf_dataset_cli.py
docs/: CI_CD_PIPELINE.md  COLLABORATIVE_WORKFLOW_GUIDE.md  END_TO_END_QA_CHECKLIST_SPRINT4.md  HF_RELEASE_HOSTING.md  HF_UPLOAD_CONSTRAINTS.md  RELEASE_PROCESS.md  TOKEN_SECURITY.md  TOKEN_USAGE_EXAMPLES.md  USAGE.md
hf_bulk_upload_tool/: BUILD_GUIDE.md  HF_Dataset_Uploader.spec  IMPLEMENTATION_PROTOCOL.md  RATE_LIMITER_GUIDE.md  README.md  README_GUI.md  __init__.py  hf_uploader_gui.spec  main_gui.py  progress_bar_utils.py  requirements.txt  requirements_gui.txt  resilience_utils.py  run_upload.ps1  sharding_utils.py  test_gui.py  upload_dataset.py  upload_logic.py
hf_bulk_upload_tool_v2/: README.md  requirements.txt  run_upload.ps1  upload_dataset_v2.py
hf_upload_app/: README.md  app.py  app_native.py  build_windows.ps1  hf_upload_app.spec  native_ui.py  requirements.txt
hf_upload_script/: HOW_TO_USE.md  README.md  app.py  requirements.txt
scripts/: smoke_test_upload.ps1  upload_release.ps1  upload_release_to_hf.py
(+108 files in other folders)
