[project]
name = "BirdNET-Validator-App"
version = "0.1.0"
description = "BirdNET-Validator-App for multi-project bird detection review workflows"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
birdnet-uploader = "src.uploader_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
