[project]
name = "BirdNET-Uploader-App"
version = "0.1.0"
description = "BirdNET-Uploader-App: resumable uploader for large audio datasets to Hugging Face"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
birdnet-uploader = "src.uploader.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
